tests/snapshots/examples_fixtures/type_system__failing__209_stage_cascade_collapse.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/209_stage_cascade_collapse.flx
== compile ==
failed (parse)
== diagnostics ==
error[E071]: Unterminated String

String literal is missing closing quote.

  examples/type_system/failing/209_stage_cascade_collapse.flx:26:15
   |
26 |     let msg = "hello
   |               ^^^^^^

Hint:
  Add a closing " at the end of the string.


error[E034]: Unexpected Closing Delimiter

Unexpected `}` outside of a block.

  examples/type_system/failing/209_stage_cascade_collapse.flx:29:1
   |
29 | }
   | ^

Found 2 errors.
== stdout ==
<not executed>
